fix code styling to wrap not scroll

--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -124,7 +124,7 @@ figcaption {
 }
 
 pre {
-    overflow-x: scroll;
+    white-space: pre-wrap;
 }
 
 code {
